2006-07-20  Roman Kennke  <kennke@aicas.com>

	* gnu/javax/imageio/IIOInputStream.java: New class. Wraps
	ImageInputStreams as normal InputStreams.
	* gnu/javax/imageio/gif/GIFStream.java:
	Moved to gnu/javax/imageio/IIOInputStream.java.
	* gnu/javax/imageio/gif/GIFImageReader.java
	(readImage): Use IIOInputStream.
	* gnu/javax/imageio/gif/GIFImageReaderSpi.java
	(canDecodeInput): Use IIOInputStream.
	* gnu/javax/imageio/png/PNGException.java: Make subclass
	of IOException.
	* gnu/javax/imageio/png/PNGImageReader.java: New class.
	Implements the ImageIO ImageReader for PNG.
	* gnu/javax/imageio/png/PNGImageReaderSpi.java: New class.
	Implements the ImageIO ImageReaderSpi for PNG.
	* javax/imageio/spi/IIORegistry.java:
	(IIORegistry): Add PNGImageReaderSpi.

2006-07-20  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/image/ComponentSampleModel.java
	(getPixel): Added argument check,
	(getSample): Modified exception message.

2006-07-20  David Gilbert  <david.gilbert@object-refinery.com>

	PR Classpath/28422
	* java/awt/image/ConvolveOp.java
	(filter(Raster, WritableRaster)): Reimplemented,
	(fillEdge): New private method.

2006-07-19  Keith Seitz  <keiths@redhat.com>

	* include/jvmti.h (JVMTI_VERSION_1_0): Define.
	(JVMTI_VERSION): Define.

2006-07-19  Roman Kennke  <kennke@aicas.com>

	* resource/gnu/regexp/MessagesBundle.properties,
	* resource/gnu/regexp/MessagesBundle_fr.properties,
	* resource/gnu/regexp/MessagesBundle_it.properties:
	Moved to resource/gnu/java/util/regex.
	* resource/gnu/java/util/regex/MessagesBundle.properties,
	* resource/gnu/java/util/regex/MessagesBundle_fr.properties,
	* resource/gnu/java/util/regex/MessagesBundle_it.properties:
	New files.
	* gnu/java/util/regex/RE.java
	Use new resource bundle location.

2006-07-19  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(paintChildren): Refactored. The paintChildrenOptimized method
	has been moved back in here. Added locking of the tree and