@@ -67,6 +67,7 @@ import java.awt.ScrollPane;
 import java.awt.Scrollbar;
 import java.awt.TextArea;
 import java.awt.TextField;
+import java.awt.Transparency;
 import java.awt.Window;
 import java.awt.datatransfer.Clipboard;
 import java.awt.dnd.DragGestureEvent;
@@ -528,10 +529,16 @@ public class XToolkit
   {
     Image image;
     BufferedImage buffered = ImageIO.read(i);
-    if (buffered != null)
+    // If the bufferedimage is opaque, then we can copy it over to an
+    // X Pixmap for faster drawing.
+    if (buffered != null && buffered.getTransparency() == Transparency.OPAQUE)
       {
         ImageProducer source = buffered.getSource();
         image = createImage(source);
+      }
+    else if (buffered != null)
+      {
+        image = buffered;
       }
     else
       {
